fix: post count, reduce unused account dto